Bug 63957 - intel_dri.c:1526:1: error: unknown type name 'bool'
Summary: intel_dri.c:1526:1: error: unknown type name 'bool'
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/intel (show other bugs)
Version: git
Hardware: x86 (IA32) Linux (All)
: medium normal
Assignee: Chris Wilson
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-04-26 11:13 UTC by Fabio Pedretti
Modified: 2013-04-26 12:23 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Fabio Pedretti 2013-04-26 11:13:58 UTC
Current git fails to build on Ubuntu 12.04, full log here:
https://launchpadlibrarian.net/138406037/buildlog_ubuntu-precise-i386.xserver-xorg-video-intel_2%3A2.21.6%2Bgit1304261233.8eaafd~gd~p_FAILEDTOBUILD.txt.gz

There are also a lot of compile warnings.
Comment 1 Chris Wilson 2013-04-26 12:23:04 UTC
commit 7dfb359677027310f4617b49f3da2321727a076f
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Fri Apr 26 13:20:36 2013 +0100

    uxa/dri: Fix compile error for unknown 'bool'
    
    It appears that it is only accidentally pulled in on some systems, but
    not all.
    
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=63957
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>

The warnings come from the Xorg headers (and xorg macros) should be fixed upstream.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.