uxa/dri: Fix compile error for unknown 'bool'

It appears that it is only accidentally pulled in on some systems, but
not all.

Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=63957
Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>